@@ -253,6 +253,7 @@
     <button type="submit" id="click_me_123" title="Click Title button" value="click_me">Click me!</button>
     <button type="submit" name="form[no_value]">No Value!</button>
     <button id="no_type">No Type!</button>
+    <input type="button" disabled value="Disabled button"/>
   </p>
 </form>
 
